--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
 	"name": "fcc-learn-npm-package-json",
+	"author": "Patar Siahaan",
+  "description": "A project that does something awesome",
+  "keywords": [ "backend", "nodejs", "freecodecamp" ],
+  "license": "MIT",
+  "version": "1.2.0",
 	"dependencies": {
-		"express": "^4.14.0"
-	},
+    "express": "4.14.0"
+  },
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js"
